# shortener

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  utils.py
backend/app/api/: dependencies.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: root.py  shortener.py
backend/app/core/: shortener.py
backend/app/models/: url.py
frontend/static/css/: styles.css
frontend/static/js/: main.js
frontend/templates/: index.html
frontend/templates/errors/: 404.html  503.html
