[tool.poetry]
name = "shorter"
version = "0.1.0"
description = ""
authors = ["senchenkovasiliy <senchenko.fortech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pytest = "^8.2.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
redis = "^5.0.7"
fakeredis = "^2.23.3"
aiofiles = "^24.1.0"
Jinja2 = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
